--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
 
     <body>
         <section>
-            <div class="container">
+            <div class="section">
                 <div class="container1">
                 <div class="container2">
                     <h5 class="button">free</h5>
@@ -35,7 +35,19 @@
 
 
         <section>
-            
+            <div class="section2">
+                <div class="container">
+                   <h2 class="text1">Ready to take your <br>
+                    business growth <br>
+                    to the next level?</h2>
+
+                    <div class="row">
+                        <div class="design2">
+
+                        </div>
+                    </div>
+                </div>
+            </div>
         </section>
     </body>
 </html>
