--- a/index.html
+++ b/index.html
@@ -75,13 +75,31 @@
         </section>
 
 
-        <section>
-           <div>
-            <h2 class="text"> <br>
-                high-impact services <br>
-                for your buisness</h2>
-           </div>
-        </section>
+        <section class="services-section">
+            <h5 class="header2">Our services</h5>
+            <br>
+             <h2 class="text">High-impact services <br>for your business</h2>
+
+  <div class="services-container">
+    <div class="service-box">
+        <img src="icons/pencil.png" width="40px">
+      <h4 class="p1">Content Marketing</h4>
+      <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit.</p>
+    </div>
+
+    <div class="service-box2">
+        <img src="icons/pencil.png" width="40px">
+      <h4 class="p1">Graphic Design</h4>
+      <p>Powerful visual storytelling for your brand.</p>
+    </div>
+
+    <div class="service-box2">
+        <img src="icons/pencil.png" width="40px">
+      <h4 class="p1">Digital Marketing</h4>
+      <p>SEO, strategy, and content to boost your online presence.</p>
+    </div>
+  </div>
+</section>
 
        
     </body>
